--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
+        "nunomaduro/larastan": "^1.0",
+        "phpstan/phpstan": "^1.5",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
